{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 616,
  "lineage": "c8525246-0a99-70a2-252d-a90109dcd028",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bigip_mgmt_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0704123141fce3e02",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:elastic-ip/eipalloc-0704123141fce3e02",
            "domain": "vpc",
            "id": "eipalloc-0704123141fce3e02",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-41-237-16.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.237.16",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "BIG-IP-MGMT-EIP"
            },
            "tags_all": {
              "Name": "BIG-IP-MGMT-EIP"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "c1-cp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0642e44716cc35958",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:elastic-ip/eipalloc-0642e44716cc35958",
            "association_id": "eipassoc-09a4095727773616a",
            "domain": "vpc",
            "id": "eipalloc-0642e44716cc35958",
            "instance": "i-0259b0a8e1c3717c8",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d092195e17b8a7f6",
            "private_dns": "ip-10-0-2-10.eu-west-2.compute.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-13-42-86-99.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.86.99",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "OB1-c1-cp1-eip"
            },
            "tags_all": {
              "Name": "OB1-c1-cp1-eip"
            }
          },
          "dependencies": [
            "aws_instance.c1-cp1",
            "aws_security_group.f5",
            "data.template_file.user_data1",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "c1-node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ecc2f7feb4e5b15",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:elastic-ip/eipalloc-00ecc2f7feb4e5b15",
            "association_id": "eipassoc-03248adc47ac89493",
            "domain": "vpc",
            "id": "eipalloc-00ecc2f7feb4e5b15",
            "instance": "i-034e9ea188beb1ea7",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-00b799e563bf45ab4",
            "private_dns": "ip-10-0-2-11.eu-west-2.compute.internal",
            "private_ip": "10.0.2.11",
            "public_dns": "ec2-18-170-15-127.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.15.127",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "OB1-c1-node1-eip"
            },
            "tags_all": {
              "Name": "OB1-c1-node1-eip"
            }
          },
          "dependencies": [
            "aws_instance.c1-node1",
            "aws_security_group.f5",
            "data.template_file.user_data2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "c1-node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f448115249af7b6d",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:elastic-ip/eipalloc-0f448115249af7b6d",
            "association_id": "eipassoc-0169a78a431816415",
            "domain": "vpc",
            "id": "eipalloc-0f448115249af7b6d",
            "instance": "i-06077f377446d46ea",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0a5539ed418d5949b",
            "private_dns": "ip-10-0-2-12.eu-west-2.compute.internal",
            "private_ip": "10.0.2.12",
            "public_dns": "ec2-13-41-2-126.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.2.126",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "OB1-c1-node2-eip"
            },
            "tags_all": {
              "Name": "OB1-c1-node2-eip"
            }
          },
          "dependencies": [
            "aws_instance.c1-node2",
            "aws_security_group.f5",
            "data.template_file.user_data3",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "c1-node3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e344f97ab7c43055",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:elastic-ip/eipalloc-0e344f97ab7c43055",
            "association_id": "eipassoc-0fd9f90a0539d3662",
            "domain": "vpc",
            "id": "eipalloc-0e344f97ab7c43055",
            "instance": "i-06b98e6a893ee3d87",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-03330fee29a27e216",
            "private_dns": "ip-10-0-2-13.eu-west-2.compute.internal",
            "private_ip": "10.0.2.13",
            "public_dns": "ec2-35-176-171-211.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.171.211",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "OB1-c1-node3-eip"
            },
            "tags_all": {
              "Name": "OB1-c1-node3-eip"
            }
          },
          "dependencies": [
            "aws_instance.c1-node3",
            "aws_security_group.f5",
            "data.template_file.user_data4",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bigip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00920d9e85b5caa90",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:instance/i-00e82c278477c5d54",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e82c278477c5d54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "OB1_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0b0a43314931b7777"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-088cc1b6755ddb8c8"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-0b0a43314931b7777"
              }
            ],
            "primary_network_interface_id": "eni-0b0a43314931b7777",
            "private_dns": "ip-10-0-1-100.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-13-41-237-16.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.237.16",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 246,
                "throughput": 0,
                "volume_id": "vol-0517840b2f44c68bd",
                "volume_size": 82,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088fdd76bf00b089c",
            "tags": {
              "Name": "OB1_BIG_IP"
            },
            "tags_all": {
              "Name": "OB1_BIG_IP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081041855132c8eab"
            ]
          },
          "dependencies": [
            "aws_network_interface.mgmt",
            "aws_network_interface.prod",
            "aws_security_group.f5",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c1-cp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0379821d182aac933",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:instance/i-0259b0a8e1c3717c8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0259b0a8e1c3717c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "OB1_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d092195e17b8a7f6"
              }
            ],
            "primary_network_interface_id": "eni-0d092195e17b8a7f6",
            "private_dns": "ip-10-0-2-10.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ba14e371ec58251",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-081041855132c8eab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f35e982ee64768a",
            "tags": {
              "Name": "OB1-c1-cp1"
            },
            "tags_all": {
              "Name": "OB1-c1-cp1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081041855132c8eab"
            ]
          },
          "dependencies": [
            "aws_security_group.f5",
            "data.template_file.user_data1",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c1-node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0379821d182aac933",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:instance/i-034e9ea188beb1ea7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034e9ea188beb1ea7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "OB1_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00b799e563bf45ab4"
              }
            ],
            "primary_network_interface_id": "eni-00b799e563bf45ab4",
            "private_dns": "ip-10-0-2-11.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.11",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0668d7fb51741b898",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-081041855132c8eab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f35e982ee64768a",
            "tags": {
              "Name": "OB1-c1-node1"
            },
            "tags_all": {
              "Name": "OB1-c1-node1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081041855132c8eab"
            ]
          },
          "dependencies": [
            "aws_security_group.f5",
            "data.template_file.user_data2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c1-node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0379821d182aac933",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:instance/i-06077f377446d46ea",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06077f377446d46ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "OB1_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a5539ed418d5949b"
              }
            ],
            "primary_network_interface_id": "eni-0a5539ed418d5949b",
            "private_dns": "ip-10-0-2-12.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.12",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8d89a75bddae6ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-081041855132c8eab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f35e982ee64768a",
            "tags": {
              "Name": "OB1-c1-node2"
            },
            "tags_all": {
              "Name": "OB1-c1-node2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081041855132c8eab"
            ]
          },
          "dependencies": [
            "aws_security_group.f5",
            "data.template_file.user_data3",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c1-node3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0379821d182aac933",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:instance/i-06b98e6a893ee3d87",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b98e6a893ee3d87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "OB1_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03330fee29a27e216"
              }
            ],
            "primary_network_interface_id": "eni-03330fee29a27e216",
            "private_dns": "ip-10-0-2-13.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.13",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3377901cf839f05",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-081041855132c8eab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f35e982ee64768a",
            "tags": {
              "Name": "OB1-c1-node3"
            },
            "tags_all": {
              "Name": "OB1-c1-node3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081041855132c8eab"
            ]
          },
          "dependencies": [
            "aws_security_group.f5",
            "data.template_file.user_data4",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:network-interface/eni-0b0a43314931b7777",
            "id": "eni-0b0a43314931b7777",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:e0:76:19:40:db",
            "owner_id": "524339405707",
            "private_dns_name": "ip-10-0-1-100.eu-west-2.compute.internal",
            "private_ip": "10.0.1.100",
            "private_ip_list": [
              "10.0.1.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.100"
            ],
            "private_ips_count": 0,
            "region": "eu-west-2",
            "security_groups": [
              "sg-081041855132c8eab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088fdd76bf00b089c",
            "tags": {
              "Name": "BIG-IP-MGMT"
            },
            "tags_all": {
              "Name": "BIG-IP-MGMT"
            }
          },
          "dependencies": [
            "aws_security_group.f5",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:network-interface/eni-088cc1b6755ddb8c8",
            "id": "eni-088cc1b6755ddb8c8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:2e:b8:35:40:31",
            "owner_id": "524339405707",
            "private_dns_name": "ip-10-0-2-100.eu-west-2.compute.internal",
            "private_ip": "10.0.2.100",
            "private_ip_list": [
              "10.0.2.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.100"
            ],
            "private_ips_count": 0,
            "region": "eu-west-2",
            "security_groups": [
              "sg-081041855132c8eab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f35e982ee64768a",
            "tags": {
              "Name": "BIG-IP-PROD"
            },
            "tags_all": {
              "Name": "BIG-IP-PROD"
            }
          },
          "dependencies": [
            "aws_security_group.f5",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "f5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:security-group/sg-081041855132c8eab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081041855132c8eab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "OB1-f5",
            "name_prefix": "",
            "owner_id": "524339405707",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "OB1-SecurityGroup1"
            },
            "tags_all": {
              "Name": "OB1-SecurityGroup1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08464604734802d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:network-acl/acl-004b7f5544bcfa1e3",
            "default_network_acl_id": "acl-004b7f5544bcfa1e3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-004b7f5544bcfa1e3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "524339405707",
            "region": "eu-west-2",
            "subnet_ids": [
              "subnet-04f35e982ee64768a",
              "subnet-088fdd76bf00b089c"
            ],
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08464604734802d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:route-table/rtb-077a5ee61a3daf862",
            "default_route_table_id": "rtb-077a5ee61a3daf862",
            "id": "rtb-077a5ee61a3daf862",
            "owner_id": "524339405707",
            "propagating_vgws": null,
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08464604734802d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:security-group/sg-0a6a10ff59ec70d36",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a6a10ff59ec70d36",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "524339405707",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08464604734802d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcbdbee9556a94ec",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:elastic-ip/eipalloc-0bcbdbee9556a94ec",
            "domain": "vpc",
            "id": "eipalloc-0bcbdbee9556a94ec",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-52-56-88-174.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.88.174",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad1d3d1e88d7d61e",
            "arn": "arn:aws:ec2:eu-west-2:524339405707:elastic-ip/eipalloc-0ad1d3d1e88d7d61e",
            "domain": "vpc",
            "id": "eipalloc-0ad1d3d1e88d7d61e",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-132-241-223.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.241.223",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:internet-gateway/igw-0cb49c33e8ab6d368",
            "id": "igw-0cb49c33e8ab6d368",
            "owner_id": "524339405707",
            "region": "eu-west-2",
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08464604734802d4d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcbdbee9556a94ec",
            "association_id": "eipassoc-0efc59f099b2a68c6",
            "connectivity_type": "public",
            "id": "nat-0e03a93db0107ddf2",
            "network_interface_id": "eni-0ad1226f508075900",
            "private_ip": "10.0.1.237",
            "public_ip": "52.56.88.174",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088fdd76bf00b089c",
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad1d3d1e88d7d61e",
            "association_id": "eipassoc-00902c22830fb2b4b",
            "connectivity_type": "public",
            "id": "nat-071fd08630d5e7369",
            "network_interface_id": "eni-024d1cacda5a8ec54",
            "private_ip": "10.0.2.30",
            "public_ip": "18.132.241.223",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04f35e982ee64768a",
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c2af478ad3110dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e03a93db0107ddf2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-01c2af478ad3110dd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0638bf4f68a85e4581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-071fd08630d5e7369",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0638bf4f68a85e458",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb49c33e8ab6d368",
            "id": "r-rtb-098bc3146ebab6c511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-098bc3146ebab6c51",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:route-table/rtb-01c2af478ad3110dd",
            "id": "rtb-01c2af478ad3110dd",
            "owner_id": "524339405707",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08464604734802d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:route-table/rtb-0638bf4f68a85e458",
            "id": "rtb-0638bf4f68a85e458",
            "owner_id": "524339405707",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08464604734802d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:route-table/rtb-098bc3146ebab6c51",
            "id": "rtb-098bc3146ebab6c51",
            "owner_id": "524339405707",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08464604734802d4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e61dc6de0ab94c49",
            "region": "eu-west-2",
            "route_table_id": "rtb-01c2af478ad3110dd",
            "subnet_id": "subnet-0998d0a3f8efd0491"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b95e8a817230175a",
            "region": "eu-west-2",
            "route_table_id": "rtb-098bc3146ebab6c51",
            "subnet_id": "subnet-088fdd76bf00b089c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0420bb66736a1d707",
            "region": "eu-west-2",
            "route_table_id": "rtb-098bc3146ebab6c51",
            "subnet_id": "subnet-04f35e982ee64768a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:subnet/subnet-0998d0a3f8efd0491",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0998d0a3f8efd0491",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "524339405707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08464604734802d4d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:subnet/subnet-088fdd76bf00b089c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088fdd76bf00b089c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "524339405707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08464604734802d4d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:subnet/subnet-04f35e982ee64768a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f35e982ee64768a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "524339405707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08464604734802d4d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:524339405707:vpc/vpc-08464604734802d4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004b7f5544bcfa1e3",
            "default_route_table_id": "rtb-077a5ee61a3daf862",
            "default_security_group_id": "sg-0a6a10ff59ec70d36",
            "dhcp_options_id": "dopt-0658343fff1b87354",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08464604734802d4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-077a5ee61a3daf862",
            "owner_id": "524339405707",
            "region": "eu-west-2",
            "tags": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "OB1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}